--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,1 +1,11 @@
 @import "colors";
+
+.left-navbar{
+    background-color:$color-negro;
+}
+.content-side{
+    background:$color-gris;
+}
+.no-padding{
+    padding:0!important;
+}
