--- a/src/assets/sass/_colors.scss
+++ b/src/assets/sass/_colors.scss
@@ -4,3 +4,9 @@ $color-azul: #00e5ff;
 $color-negro: #1A1A1A;
 $color-white:#ffffff;
 $color-gris:#455a64;
+$color-blue-dark-gris:#263238;
+$color-marron-dark:#303030;
+
+.primary{
+    background: red;
+}
