--- a/src/assets/sass/_colors.scss
+++ b/src/assets/sass/_colors.scss
@@ -1,5 +1,6 @@
 //colores principales
 $color-verde: #42b983;
+$color-naranja:#FF8F00;
 $color-azul: #00e5ff;
 $color-negro: #1A1A1A;
 $color-white:#ffffff;
