ajustes en mobile

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -355,6 +355,11 @@ p,a,b{
             margin-bottom: $i+rem;      
         }
       }
+
+      .abstract-bg-right{
+          right: 0%;
+          width: 50vw;
+      }
     .row{
         margin-left:0px!important;
         margin-right:0px!important;
