--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -11,6 +11,12 @@ h5,h6{
     text-transform: uppercase!important;
 }
 
+
+.theme--light.v-footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 @for $i from 1 through 5 {
     .space-#{$i} {
       padding: $i+00%;
